[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[project]
name = "yt-community-post-archiver"
version = "0.2.0"
description = 'Archives YouTube community posts.'
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = ["youtube", "community", "posts", "archiver", "cli"]
authors = [{ name = "Pyreko", email = "25498386+Pyreko@users.noreply.github.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = [
  "attrs==24.2.0",
  "certifi==2026.1.4",
  "charset-normalizer==3.3.2",
  "h11==0.16.0",
  "idna==3.7",
  "outcome==1.3.0.post0",
  "PySocks==1.7.1",
  "requests==2.32.4",
  "selenium==4.41.0",
  "sniffio==1.3.0",
  "sortedcontainers==2.4.0",
  "trio==0.33.0",
  "trio-websocket==0.12.2",
  "urllib3==2.6.3",
  "wsproto==1.2.0",
  "filetype==1.2.0",
  "pillow>=12.1.1",
  "beautifulsoup4==4.14.3",
]

[project.urls]
Documentation = "https://github.com/Pyreko/yt-community-post-archiver#readme"
Issues = "https://github.com/Pyreko/yt-community-post-archiver/issues"
Source = "https://github.com/Pyreko/yt-community-post-archiver"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 140

[tool.uv.build-backend]
module-name = "yt_community_post_archiver"

[project.scripts]
yt-community-post-archiver = "yt_community_post_archiver:main"

[dependency-groups]
dev = ["pytest>=8.3", "pytest-rerunfailures>=15.0"]
